# alphasweep

./: .env  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  runbook.md
conf/: execution.yaml  risk.yaml  settings.yaml  stable_alloc.yaml
docs/: OPERATIONS_NEXT_STEPS.md  backtest.md  catalog.md  contracts.md  dashboards.md  data_doctor.md  genetic_training.md  playbooks.md  runtime.md
models/: __init__.py  ensemble.py  tcn_adapter.py  xgb_adapter.py
src/: bt_runner.py  engine.py  engine_hooks.py  execution.py  live_runner.py  pnl_attribution.py  risk.py  wf_runner.py
src/ingest/: __init__.py  (+1 more)
tests/: conftest.py  test_adapters.py  test_attribution.py  test_backtest_enhancements.py  test_backtest_partial_fill.py  test_broker_execution_client.py  test_broker_sdks.py  test_brokers.py  test_champion_challenger.py  test_config.py  test_datasets.py  test_decision_loop.py  test_drift_detector.py  test_e2e.py  test_execution.py  test_execution_smoke.py  test_features.py  test_features_scaler.py  test_fee_schedule.py  test_genetic.py  test_genetic_training.py  test_horizon_blending.py  test_ingest.py  test_ingest_combine.py  test_ingest_orderbook_news.py  test_ingest_service.py  test_labeling.py  test_ledger_extra.py  test_lstm_windows_and_norm.py  test_market_calendar.py  test_metrics_dashboard.py  test_model_registry.py  test_model_registry_mlflow.py  test_multi_horizon_ensemble.py  test_observability.py  test_observability_alerts.py  test_oms.py  test_plot_calibration.py  test_pnl_attribution.py  test_profit_router.py  (+17 more)
(+63 files in other folders)
