[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-pipeline"
version = "0.1.0"
description = "Quantitative research pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pandas-market-calendars",
    "numpy",
    "pyarrow",
    "fastparquet",
    "numba",
    "ccxt",
    "pydantic<2",
    "click",
    "tqdm",
    "sqlalchemy",
    "python-dotenv",
    "pyyaml",
    "requests",
    "fastapi",
    "prometheus-client",
    "uvicorn",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
